# tonic-issue-repro

./: Cargo.toml  Dockerfile  README.md  build.rs  do_test.sh
src/: proxy.rs  server.rs
