[package]
name = "tonic-repro"
version = "0.1.0"
authors = ["K900 <me@0upti.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = '*', features = ['macros'] }
prost = '*'
tonic = '*'
warp = '*'

[build-dependencies]
tonic-build = '*'

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "proxy"
path = "src/proxy.rs"